--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,8 @@ ENV DB_USER=$DB_USER
 ARG DB_PASS
 ENV DB_PASS=$DB_PASS
 
+ENV GOOGLE_APPLICATION_CREDENTIALS=creds.key
+
 RUN mkdir /app
 ADD . /app
 WORKDIR /app
